-- Enum types
CREATE TYPE genre_type AS ENUM ('ACTION', 'ANIMATION', 'COMEDY', 'DRAMA', 'HISTORICAL', 'ROMANTIC', 'SOCIAL', 'SPORTS', 'THRILLER', 'WAR');
CREATE TYPE language_type AS ENUM ('ENGLISH', 'HINDI', 'KANNADA', 'MARATHI', 'PUNJAB', 'TAMIL', 'TELUGU');
CREATE TYPE seat_type AS ENUM ('CLASSIC', 'PREMIUM');
CREATE TYPE gender_type AS ENUM ('FEMALE', 'MALE', 'OTHER');
CREATE TYPE location_type AS ENUM ('BANGALORE', 'CHENNAI', 'DELHI', 'MUMBAI');

-- Movies table
CREATE TABLE movies (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY,
    duration INTEGER CHECK (duration > 0),
    genre genre_type,
    language language_type,
    movie_name VARCHAR(255) NOT NULL UNIQUE,
    rating FLOAT CHECK (rating >= 0 AND rating <= 10),
    release_date DATE,
    PRIMARY KEY (id)
);

-- Theaters table
CREATE TABLE theaters (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY,
    address VARCHAR(255),
    name VARCHAR(255) NOT NULL UNIQUE,
    location location_type NOT NULL,
    PRIMARY KEY (id)
);

-- Theater_seats table
CREATE TABLE theater_seats (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY,
    seat_no VARCHAR(20) NOT NULL,
    seat_type seat_type,
    theater_id INTEGER NOT NULL,
    PRIMARY KEY (id),
    FOREIGN KEY (theater_id) REFERENCES theaters(id)
);

-- Shows table
CREATE TABLE shows (
    show_id INTEGER GENERATED BY DEFAULT AS IDENTITY,
    date DATE NOT NULL,
    time TIME(6) NOT NULL,
    movie_id INTEGER NOT NULL,
    theater_id INTEGER NOT NULL,
    PRIMARY KEY (show_id),
    FOREIGN KEY (movie_id) REFERENCES movies(id),
    FOREIGN KEY (theater_id) REFERENCES theaters(id)
);

-- Show_seats table
CREATE TABLE show_seats (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY,
    is_available BOOLEAN NOT NULL DEFAULT TRUE,
    is_food_contains BOOLEAN,
    price INTEGER CHECK (price > 0),
    theater_seat_id INTEGER NOT NULL,
    show_id INTEGER NOT NULL,
    PRIMARY KEY (id),
    FOREIGN KEY (theater_seat_id) REFERENCES theater_seats(id),
    FOREIGN KEY (show_id) REFERENCES shows(show_id)
);

-- Users table
CREATE TABLE users (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY,
    address VARCHAR(255),
    age INTEGER,
    email_id VARCHAR(255) NOT NULL UNIQUE,
    gender gender_type,
    mobile_no VARCHAR(255) NOT NULL UNIQUE,
    name VARCHAR(255) NOT NULL,
    password VARCHAR(255) NOT NULL,
    PRIMARY KEY (id)
);

-- User_roles table
CREATE TABLE user_roles (
    user_id INTEGER,
    role VARCHAR(50),
    PRIMARY KEY (user_id, role),
    FOREIGN KEY (user_id) REFERENCES users(id)
);

-- Tickets table
CREATE TABLE tickets (
    ticket_id INTEGER GENERATED BY DEFAULT AS IDENTITY,
    booked_at DATE,
    total_tickets_price INTEGER CHECK (total_tickets_price >= 0),
    show_id INTEGER NOT NULL,
    user_id INTEGER NOT NULL,
    PRIMARY KEY (ticket_id),
    FOREIGN KEY (show_id) REFERENCES shows(show_id),
    FOREIGN KEY (user_id) REFERENCES users(id)
);

-- Ticket_seats table
CREATE TABLE ticket_seats (
    ticket_id INTEGER,
    show_seat_id INTEGER,
    PRIMARY KEY (ticket_id, show_seat_id),
    FOREIGN KEY (ticket_id) REFERENCES tickets(ticket_id),
    FOREIGN KEY (show_seat_id) REFERENCES show_seats(id)
);

-- Indexes
CREATE INDEX idx_users_email_id ON users(email_id);
CREATE INDEX idx_shows_movie_id ON shows(movie_id);
CREATE INDEX idx_shows_theater_id ON shows(theater_id);
CREATE INDEX idx_theaters_location ON theaters(location);